Run Travis on Precise distro
So that we can still test against PHP 5.3: https://travis-ci.org/Prospress/action-scheduler/jobs/332479493

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ env:
     - WP_VERSION=4.5 WP_MULTISITE=1
     - WP_VERSION=4.4 WP_MULTISITE=1
 
+dist: precise
+
 # Grab the setup script and execute
 before_script:
     - source tests/travis/setup.sh $TRAVIS_PHP_VERSION
