--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,23 @@
 
 # Tell Travis CI we're using PHP
 language: php
-
-# We nee to use Precise, not Trusty, to test against PHP 5.3, see https://github.com/travis-ci/travis-ci/issues/8219
-dist: precise
+sudo: false
 
 # Versions of PHP to test against
 php:
-    - "5.3"
     - "5.4"
     - "5.5"
     - "5.6"
     - "7.0"
     - "7.1"
+
+# Specify a custom build matrix to include Precise for PHP 5.3
+matrix:
+    include:
+        - os: linux
+          dist: precise
+          php: "5.3"
+
 
 # Specify versions of WordPress to test against
 # WP_VERSION = WordPress version number (use "master" for SVN trunk)
