Test PHP 5.3 on WP 4.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,11 @@ matrix:
         - os: linux
           dist: precise
           php: "5.3"
+          env: WP_VERSION=master WP_MULTISITE=0
+        - os: linux
+          dis: precise
+          php: "5.3"
+          env: WP_VERSION=4.9 WP_MULTISITE=0
     allow_failures:
         - env: WP_VERSION=master WP_MULTISITE=0
         - env: WP_VERSION=master WP_MULTISITE=1
